# setup.cfg generator: https://pypi.org/project/setupcfg/
[metadata]
name = xdg-cache
version = 2019.03.02
url = https://github.com/looking-for-a-job/xdg-cache.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown

[options]
install_requires = 
	public
	setuptools
packages = 
	xdg_cache
