# https://pypi.org/project/setupcfg-generator/
[metadata]
name = xdg-cache
version = 2019.4.13
url = https://github.com/looking-for-a-job/xdg-cache.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = xgd cache

[options]
install_requires = 
	public
	setuptools
packages = 
	xdg_cache
